feat: setup export csv function on client and display components inside the admin dashboard

--- a/src/app/admin/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard.component.html
@@ -9,7 +9,7 @@
         <p>Welcome to the admin dashboard!</p>
         <p>Here you can manage users, view reports, and configure settings.</p>
         <ng-container>
-          <app-registrations-overview></app-registrations-overview>
+          <router-outlet></router-outlet>
         </ng-container>
       </nb-card-body>
     </nb-card>
