--- a/src/app/admin/components/sidenav/sidenav.component.html
+++ b/src/app/admin/components/sidenav/sidenav.component.html
@@ -1,9 +1,11 @@
 <nav class="sidenav">
   <ul>
-    <li><a href="#">Dashboard</a></li>
-    <li><a href="#">Users</a></li>
-    <li><a href="#">Reports</a></li>
-    <li><a href="#">Settings</a></li>
-    <li><a href="#">Logout</a></li>
+    <li>
+      <a
+        routerLink="registrations-overview"
+        routerLinkActive="active"
+        >Inscrições</a
+      >
+    </li>
   </ul>
 </nav>
