--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,17 +1,37 @@
 <div class="registration-container">
   <nb-card>
     <nb-card-header>
-      <h1>{{ campInfo.name }}</h1>
+      <img
+        alt=""
+        src="https://mcusercontent.com/1e3ede6565010c0201471308b/images/a8015d6c-02ed-4495-f1fc-fb843b115428.png"
+        width="800"
+        height="auto"
+        style="
+          display: block;
+          max-width: 100%;
+          height: auto;
+          border-radius: 20px;
+        "
+      />
     </nb-card-header>
     <nb-card-body style="padding: 1rem">
       @if(isPaymentConfirmed()) {
       <ng-container *ngTemplateOutlet="paymentCompleted"></ng-container>
       } @else {
-      <nb-stepper orientation="horizontal" #stepper>
+      <nb-stepper
+        orientation="horizontal"
+        #stepper
+      >
         <!-- Step 1: Camp Information and Acknowledgment -->
-        <nb-step [stepControl]="acknowledgmentForm" label="Informações">
+        <nb-step
+          [stepControl]="acknowledgmentForm"
+          label="Informações"
+        >
           <div class="camp-info">
-            <p class="description" [innerHTML]="campInfo.description"></p>
+            <p
+              class="description"
+              [innerHTML]="campInfo.description"
+            ></p>
 
             <div class="info-grid">
               <div class="info-item">
@@ -48,7 +68,7 @@
               </p>
               <p>
                 Formas de pagamento:
-                {{ campInfo.paymentOptions.methods.join(" ou ") }}
+                {{ campInfo.paymentOptions.methods.join(' ou ') }}
               </p>
               @if (campInfo.paymentOptions.maxInstallments > 1) {
               <p class="installment-info">
@@ -70,7 +90,10 @@
               }
             </div>
 
-            <form [formGroup]="acknowledgmentForm" class="acknowledgment-form">
+            <form
+              [formGroup]="acknowledgmentForm"
+              class="acknowledgment-form"
+            >
               <div class="checkbox-group">
                 <nb-checkbox formControlName="hasReadInfo">
                   Li e compreendi todas as informações do acampamento
@@ -97,8 +120,14 @@
         </nb-step>
 
         <!-- Step 2: Registration Form -->
-        <nb-step [stepControl]="registrationForm" label="Inscrição">
-          <form [formGroup]="registrationForm" class="registration-form">
+        <nb-step
+          [stepControl]="registrationForm"
+          label="Inscrição"
+        >
+          <form
+            [formGroup]="registrationForm"
+            class="registration-form"
+          >
             <div class="form-row">
               <nb-form-field>
                 <label>Nome do Adolescente *</label>
@@ -142,13 +171,13 @@
                   [value]="calculatedAge()"
                   readonly
                   disabled
-                  />
-                  @let age = calculatedAge();
-                  @if (age != null && (age < 11 || age > 16)) {
-                    <span class="error-message">
-                      O adolescente deve ter entre 12 e 16 anos de idade.
-                    </span>
-                  }
+                />
+                @let age = calculatedAge(); @if (age != null && (age < 11 || age
+                > 16)) {
+                <span class="error-message">
+                  O adolescente deve ter entre 12 e 16 anos de idade.
+                </span>
+                }
               </nb-form-field>
 
               <nb-form-field>
@@ -201,7 +230,10 @@
             <div class="form-row">
               <nb-form-field>
                 <label>É membro de alguma igreja?</label>
-                <nb-select fullWidth formControlName="churchMembership">
+                <nb-select
+                  fullWidth
+                  formControlName="churchMembership"
+                >
                   <nb-option value="sim">Sim</nb-option>
                   <nb-option value="nao">Não</nb-option>
                 </nb-select>
@@ -271,7 +303,10 @@
               </nb-form-field>
             </div>
 
-            <div formGroupName="responsibleInfo" class="responsible-info">
+            <div
+              formGroupName="responsibleInfo"
+              class="responsible-info"
+            >
               <h4>Informações do Responsável</h4>
               <div class="form-row">
                 <nb-form-field>
@@ -375,8 +410,8 @@
                 formControlName="parentalAuthorization"
                 [status]="getFieldStatus('parentalAuthorization')"
               >
-                Autorizo o menor citado acima a participar do evento 2º ACAMPA TEENS 
-                no Maanaim 1240, Estr. Arns, 1516, Mandaguaçu - PR,
+                Autorizo o menor citado acima a participar do evento 2º ACAMPA
+                TEENS no Maanaim 1240, Estr. Arns, 1516, Mandaguaçu - PR,
                 87160-000, no período de 31 de outubro a 02 de novembro. Esta
                 autorização está de acordo com o ECA (lei 8.069/90).
               </nb-checkbox>
@@ -389,7 +424,13 @@
           </form>
 
           <div class="button-row">
-            <button nbButton status="basic" nbStepperPrevious>Voltar</button>
+            <button
+              nbButton
+              status="basic"
+              nbStepperPrevious
+            >
+              Voltar
+            </button>
             <button
               class="next-button"
               nbButton
@@ -404,7 +445,10 @@
         </nb-step>
 
         <!-- Step 3: Payment Information -->
-        <nb-step [stepControl]="registrationForm" label="Pagamento">
+        <nb-step
+          [stepControl]="registrationForm"
+          label="Pagamento"
+        >
           <div class="payment-step">
             <div class="payment-info-box">
               <h3>Valor do Investimento</h3>
@@ -414,7 +458,7 @@
               <div class="payment-details">
                 <p>
                   Formas de pagamento:
-                  {{ campInfo.paymentOptions.methods.join(" ou ") }}
+                  {{ campInfo.paymentOptions.methods.join(' ou ') }}
                 </p>
                 @if (campInfo.paymentOptions.maxInstallments > 1) {
                 <p>
@@ -454,7 +498,11 @@
                   </button>
                 </div>
                 <div class="button-container">
-                  <button nbButton status="basic" nbStepperPrevious>
+                  <button
+                    nbButton
+                    status="basic"
+                    nbStepperPrevious
+                  >
                     Voltar
                   </button>
                 </div>
@@ -471,14 +519,17 @@
 
 <ng-template #paymentCompleted>
   <div class="confirmation-message">
-    <nb-icon icon="checkmark-circle-2-outline" status="success"></nb-icon>
+    <nb-icon
+      icon="checkmark-circle-2-outline"
+      status="success"
+    ></nb-icon>
     <h2>Inscrição realizada com sucesso!</h2>
+    <p>Seu pagamento ainda está em processo de confirmação.<br /></p>
     <p>
-      Seu pagamento ainda está em processo de confirmação.<br />
-    </p>
-    <p>
-      Enviaremos um email para confirmar a sua inscrição assim que o pagamento for validado.<br /><br />
-      <strong>Lembre-se:</strong> verifique também a sua caixa de spam para garantir que não perca nossa mensagem.
+      Enviaremos um email para confirmar a sua inscrição assim que o pagamento
+      for validado.<br /><br />
+      <strong>Lembre-se:</strong> verifique também a sua caixa de spam para
+      garantir que não perca nossa mensagem.
     </p>
     <br />
     <p>Em caso de dúvidas, entre em contato com nossa equipe:</p>
@@ -491,7 +542,11 @@
 </ng-template>
 
 <ng-template #spinner>
-  <nb-card [nbSpinner]="isLoading()" class="spinner" nbSpinnerStatus="info">
+  <nb-card
+    [nbSpinner]="isLoading()"
+    class="spinner"
+    nbSpinnerStatus="info"
+  >
     <nb-card-body></nb-card-body>
   </nb-card>
 </ng-template>
