fix: remove header border

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -6,12 +6,7 @@
         src="https://mcusercontent.com/1e3ede6565010c0201471308b/images/a8015d6c-02ed-4495-f1fc-fb843b115428.png"
         width="800"
         height="auto"
-        style="
-          display: block;
-          max-width: 100%;
-          height: auto;
-          border-radius: 20px;
-        "
+        style="display: block; max-width: 100%; height: auto;"
       />
     </nb-card-header>
     <nb-card-body style="padding: 1rem">
