feat: add row numbering and grey out unpaid registrations

--- a/src/app/admin/components/registrations-overview/registrations-overview.component.scss
+++ b/src/app/admin/components/registrations-overview/registrations-overview.component.scss
@@ -84,6 +84,15 @@
   height: 20vh;
 }
 
+.unpaid-row {
+  background-color: #f8f8f8;
+  color: #999;
+}
+
+.unpaid-row td {
+  color: #999;
+}
+
 // .table p-iconfield.ml-auto {
 //   display: flex;
 //   align-items: center;
