--- a/src/app/admin/components/registrations-overview/registrations-overview.component.html
+++ b/src/app/admin/components/registrations-overview/registrations-overview.component.html
@@ -49,6 +49,7 @@
   >
     <ng-template #header>
       <tr>
+        <th style="width: 3rem">#</th>
         <th
           pSortableColumn="name"
           style="width: 20%"
@@ -65,11 +66,9 @@
         <th style="width: 6rem"></th>
       </tr>
     </ng-template>
-    <ng-template
-      #body
-      let-reg
-    >
-      <tr>
+    <ng-template #body let-reg let-rowIndex="rowIndex">
+      <tr [ngClass]="{ 'unpaid-row': !reg.paymentConfirmed }">
+        <td>{{ rowIndex + 1 }}</td>
         <td>{{ reg.name }}</td>
         <td>{{ reg.age }}</td>
         <td>{{ reg.gender }}</td>
