feat: update header image

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,7 +3,7 @@
     <nb-card-header>
       <img
         alt=""
-        src="https://mcusercontent.com/1e3ede6565010c0201471308b/images/a8015d6c-02ed-4495-f1fc-fb843b115428.png"
+        src="../../assets/flyer.jpg"
         width="800"
         height="auto"
         style="display: block; max-width: 100%; height: auto;"
