feat: display church name on registrations page

--- a/src/app/admin/components/registrations-overview/registrations-overview.component.html
+++ b/src/app/admin/components/registrations-overview/registrations-overview.component.html
@@ -58,6 +58,7 @@
           Nome
         </th>
         <th>Idade</th>
+        <th>Igreja</th>
         <th class="gender-column">
           <ng-container>
             Gênero
@@ -100,6 +101,7 @@
         <td>{{ rowIndex + 1 }}</td>
         <td>{{ reg.name }}</td>
         <td>{{ reg.age }}</td>
+        <td>{{ reg.churchName }}</td>
         <td>{{ reg.gender }}</td>
         <td>{{ reg.responsibleName }}</td>
         <td>{{ reg.responsiblePhone | phoneFormat }}</td>
