--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -451,7 +451,7 @@
               <div class="payment-info-box">
                 <h3>Valor do Investimento</h3>
                 <div class="payment-amount">
-                  R$ {{ campInfo.price.toFixed(2) }}
+                  R$ {{ registrationAmount().toFixed(2) }}
                 </div>
                 <div class="payment-details">
                   <p>
